# my_work

./: CONTRIBUTING.md  LICENSE  MODEL_CONTRIBUTIONS.md  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  dev_deps.py  example.ipynb  main.py
Results/: codi_tstr.csv  ganblr_tstr.csv  medgan_tstr.csv  medgan_tuned_tstr.csv  pategan_tstr.csv  tabsyn_tstr.csv
discretized_data/: car1.csv
examples/: ctgan.ipynb  ganblr.ipynb  great.ipynb  medgan.ipynb  tabddpm.ipynb  tabsyn.ipynb
examples/Results/car/: codi_tstr.csv  ctgan_tstr.csv  ganblr_tstr.csv  medgan_tstr.csv  tabddpm_tstr.csv  tabsyn_tstr.csv
katabatic/: Untitled.ipynb  __init__.py
katabatic/models/: registry.py
katabatic/models/codi/: README.md  __init__.py  utils.py
katabatic/models/ctgan/: __init__.py  models.py  utils.py
katabatic/models/great/: models.py  pyproject.toml
katabatic/models/medgan/: README.md  __init__.py  models.py  utils.py
katabatic/models/pategan/: models.py
katabatic/models/tabddpm/: __init__.py  models.py  utils.py
katabatic/models/tabsyn/: __init__.py  models.py  utils.py
raw_data/: Untitled.ipynb  car1.csv
sample_data/adult/: test_full.csv  train_full.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
sample_data/car/ctgan/: metadata.json  x_synth.csv  y_synth.csv
scripts/: setup_ganblr.sh  setup_great.sh  setup_tabddpm.sh  setup_tabsyn.sh
synthetic/car/: ganblr_manual_X.csv  ganblr_manual_y.csv  great_samples.csv
train_test_data/: X_num_test.npy  X_num_train.npy  test_full.csv  train_full.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
(+26 files in other folders)
